================================
2011-05-02 19:11:06 -0400 v1_311
================================

  commit 10d55176d9883ff2c7972b3fbcf1de929a68df41
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Mon May 2 19:11:06 2011 -0400
  
    Version bump for release.

  commit da1925f5be36421f8ca970172d12adab304eba20
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Wed Apr 20 00:07:39 2011 -0400
  
    Switch to Dist::Zilla.

  commit e72a8b9ca9db88d46cc53dee27bfaa2423d4d3e9
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Tue Apr 19 13:10:51 2011 -0400
  
    Bump for release. 

================================
2011-04-18 10:18:55 -0700 v1_050
================================

  commit 871d5bc8ab73ae3655b89a7fab214d3d165854d1
  Author: Hinrik Örn Sigurðsson <hinrik.sig@gmail.com>
  Date:   Mon Apr 18 17:12:10 2011 +0000
  
    Test for transpose-chars at end of line

    Signed-off-by: Apocalypse <perl@0ne.us>

  commit d3e2add7cf71b76e57e2effd72e9336ced434cfc
  Author: Apocalypse <perl@0ne.us>
  Date:   Sun Apr 17 20:54:00 2011 -0700
  
    make wording more consistent in the skip message

  commit 2ae793e31d7c333084e235c6f53e93f3a4d8bca2
  Author: Apocalypse <perl@0ne.us>
  Date:   Sun Apr 17 20:43:55 2011 -0700
  
    add missing POE_DANTIC check

  commit f49de84cc0c0ded45e22b0e6f0cf7466b8585ffc
  Author: Apocalypse <perl@0ne.us>
  Date:   Sat Apr 16 19:12:14 2011 -0700
  
    stylistic tweaks to the recent AF_INET6 patch

  commit 2378b9f1a53bddd3296827ede6a9975cf8b97170
  Author: Apocalypse <perl@0ne.us>
  Date:   Sat Apr 16 18:52:05 2011 -0700
  
    finalize the AF_INET6 woes

  commit c47288b65b68b93bde97919260b5b7e8078bb53e
  Author: Apocalypse <perl@0ne.us>
  Date:   Sat Apr 16 15:25:28 2011 -0700
  
    squash the AF_INET6 warning for good

  commit 8a492f335f8112d669380e5871f3ff6c0111b7c9
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Sat Apr 16 17:18:43 2011 -0400
  
    Silence AF_INET6 warnings, per Apocalypse's research.
