@@ -4,7 +4,7 @@ use warnings;
 
 
 
-use ExtUtils::MakeMaker 6.31;
+use ExtUtils::MakeMaker 6.30;
 
 
 
@@ -13,7 +13,7 @@ my %WriteMakefileArgs = (
   'AUTHOR' => 'Rocco Caputo <rcaputo@cpan.org>',
   'BUILD_REQUIRES' => {},
   'CONFIGURE_REQUIRES' => {
-    'ExtUtils::MakeMaker' => '6.31'
+    'ExtUtils::MakeMaker' => '6.30'
   },
   'DISTNAME' => 'POE-Test-Loops',
   'EXE_FILES' => [
@@ -22,9 +22,9 @@ my %WriteMakefileArgs = (
   'LICENSE' => 'perl',
   'NAME' => 'POE::Test::Loops',
   'PREREQ_PM' => {
-    'Test::More' => '0'
+    'Test::More' => '0.94'
   },
-  'VERSION' => '1.311',
+  'VERSION' => '1.312',
   'test' => {
     'TESTS' => 't/*.t'
   }
