@@ -1,11 +1,14 @@
 name              = POE-Test-Loops
-version           = 1.311
+version           = 1.312
 author            = Rocco Caputo <rcaputo@cpan.org>
 license           = Perl_5
 copyright_holder  = Rocco Caputo
 
+; Test::More 0.94 isn't needed by POE::Test::Loops.
+; However the ReportVersions plugin uses it specifically.
+
 [Prereqs]
-Test::More = 0
+Test::More = 0.94
 
 [Repository]
 git_remote = gh
