@@ -124,7 +124,7 @@ sub POE::Kernel::ASSERT_DEFAULT () { 1 }
 BEGIN {
   package POE::Kernel;
 BEGIN {
-  $POE::Kernel::VERSION = '1.311';
+  $POE::Kernel::VERSION = '1.312';
 }
   use constant TRACE_DEFAULT => exists($INC{'Devel/Cover.pm'});
 }
