@@ -54,7 +54,7 @@ sub POE::Kernel::ASSERT_DEFAULT () { 1 }
 BEGIN {
   package POE::Kernel;
 BEGIN {
-  $POE::Kernel::VERSION = '1.311';
+  $POE::Kernel::VERSION = '1.312';
 }
   use constant TRACE_DEFAULT => exists($INC{'Devel/Cover.pm'});
 }
@@ -184,7 +184,7 @@ my $shutdown_program = sub {
 { # {{{ a proxy around POE::Filter::Line that doesn't support get_one
   package My::LineFilter;
 BEGIN {
-  $My::LineFilter::VERSION = '1.311';
+  $My::LineFilter::VERSION = '1.312';
 }
   sub new {
     my $class = shift;
