@@ -14,7 +14,7 @@ sub POE::Kernel::CATCH_EXCEPTIONS () { 0 }
 BEGIN {
   package POE::Kernel;
 BEGIN {
-  $POE::Kernel::VERSION = '1.311';
+  $POE::Kernel::VERSION = '1.312';
 }
   use constant TRACE_DEFAULT => exists($INC{'Devel/Cover.pm'});
 }
